# hagitori

./: CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/instructions/: ROADMAP.md.instructions.md
.github/scripts/: bump-version.mjs
.github/workflows/: ci.yml  create-release.yml  release.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/browser/: Cargo.toml
src-tauri/crates/browser/src/: chrome.rs  cloudflare.rs  config.rs  error.rs  intercept.rs  lib.rs  manager.rs  mobile.rs  stealth.rs  types.rs
src-tauri/crates/browser/tests/: browser_tests.rs
src-tauri/crates/config/: Cargo.toml
src-tauri/crates/config/src/: config_manager.rs  database.rs  extension_registry.rs  history.rs  lib.rs  library_manager.rs  session_store.rs
src-tauri/crates/config/tests/: extension_registry_tests.rs
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: error.rs  lib.rs  prelude.rs  provider.rs
src-tauri/crates/core/src/entities/: catalog.rs  chapter.rs  details.rs  download.rs  extension.rs  manga.rs  mod.rs  pages.rs
src-tauri/crates/core/tests/: entities_tests.rs
src-tauri/crates/download/: Cargo.toml
src-tauri/crates/download/src/: browser.rs  engine.rs  http.rs  image.rs  lib.rs
src-tauri/crates/download/tests/: engine_test.rs
src-tauri/crates/extensions/: Cargo.toml
src-tauri/crates/extensions/src/: extension.rs  lib.rs  loader.rs  manifest.rs  runtime.rs
src-tauri/crates/extensions/src/apis/: browser.rs  cookies.rs  crypto.rs  date.rs  entities.rs  html.rs  http.rs  mod.rs  session.rs  utils.rs
src-tauri/crates/extensions/tests/: date_test.rs  loader_test.rs  manifest_test.rs
src-tauri/crates/grouper/: Cargo.toml
src-tauri/crates/grouper/src/: cbz.rs  cleanup.rs  config.rs  lib.rs  metadata.rs
src-tauri/crates/grouper/tests/: grouper_tests.rs
src-tauri/crates/http/: Cargo.toml
src-tauri/crates/http/src/: client.rs  lib.rs  session_store.rs
src-tauri/crates/http/tests/: http_tests.rs
src-tauri/crates/providers/: Cargo.toml
src-tauri/crates/providers/src/: lib.rs  registry.rs
src-tauri/crates/providers/tests/: registry_test.rs
src-tauri/crates/sync/: Cargo.toml
src-tauri/crates/sync/src/: auto_update.rs  catalog.rs  installer.rs  integrity.rs  lib.rs  updater.rs
src-tauri/crates/sync/tests/: auto_update_tests.rs  catalog_tests.rs  installer_tests.rs  integrity_tests.rs
src-tauri/nsis/: hooks.nsh
src-tauri/src/: lib.rs  main.rs  sync_commands.rs  utils.rs
src-tauri/src/commands/: config.rs  download.rs  library.rs  manga.rs  mod.rs
src/components/extensions/: AddRepoModal.tsx  CatalogTab.tsx  InstalledTab.tsx
src/components/manga/: ChapterList.tsx  MangaHeader.tsx
src/components/ui/: Badge.tsx  BottomNav.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  Layout.tsx  ProgressBar.tsx  Select.tsx  Sidebar.tsx  Skeleton.tsx  Toast.tsx  Toggle.tsx  UpdateModal.tsx  index.ts
src/hooks/: useAppUpdater.ts  useConfig.ts  useDownloadProgress.ts  useExtensionFilters.ts  useExtensions.ts  usePlatform.ts  useSync.ts  useTranslation.ts
src/i18n/: translations.ts
src/i18n/locales/: en.ts  pt-br.ts
src/lib/: tauri.ts  utils.ts
src/pages/: Downloads.tsx  ExtensionManga.tsx  Extensions.tsx  Home.tsx  MangaDetail.tsx  Search.tsx  Settings.tsx
src/stores/: download-store.ts  library-store.ts  settings-store.ts  toast-store.ts
src/types/: index.ts
