[workspace]
resolver = "2"
members = [
    ".",
    "crates/core",
    "crates/http",
    "crates/browser",
    "crates/providers",
    "crates/download",
    "crates/grouper",
    "crates/config",
    "crates/extensions",
    "crates/sync",
]

[workspace.package]
version = "0.0.1-beta"
edition = "2024"
authors = ["hagitori"]
license = "MIT"

[workspace.lints.clippy]
collapsible_if = "warn"
manual_inspect = "warn"
needless_question_mark = "warn"
redundant_closure = "warn"
single_component_path_imports = "warn"
useless_conversion = "warn"
needless_borrows_for_generic_args = "warn"
needless_pass_by_value = "warn"
cloned_instead_of_copied = "warn"
wildcard_in_or_patterns = "warn"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
async-trait = "0.1.89"
futures = "0.3.32"

wreq = { version = "6.0.0-rc.28", features = ["cookies", "json", "gzip", "brotli", "zstd", "deflate", "stream"] }
wreq-util = "3.0.0-rc.10"

chromiumoxide = { version = "0.9", default-features = false }
fastrand = "2.3"

rquickjs = { version = "0.11.0", features = ["futures", "parallel", "classes", "macro"] }

scraper = "0.25.0"

image = "0.25.9"

rusqlite = { version = "0.38.0", features = ["bundled"] }

zip = "8.2.0"

anyhow = "1.0.102"
thiserror = "2.0.18"

parking_lot = "0.12"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

base64 = "0.22.1"
sha2 = "0.10.9"
md-5 = "0.10.6"
hmac = "0.12.1"

chrono = { version = "0.4.44", features = ["serde"] }
http = "1"
url = "2.5.8"
dirs = "6.0.0"
tempfile = "3.26.0"
lru = "0.16.3"
quick-xml = { version = "0.39.2", features = ["serialize"] }

tauri = { version = "2.10.3", features = ["image-png", "protocol-asset"] }
tauri-build = { version = "2.5.6", features = [] }
tauri-plugin-opener = "2.5.3"

hagitori-core = { path = "crates/core" }
hagitori-http = { path = "crates/http" }
hagitori-browser = { path = "crates/browser" }
hagitori-providers = { path = "crates/providers" }
hagitori-download = { path = "crates/download" }
hagitori-grouper = { path = "crates/grouper" }
hagitori-config = { path = "crates/config" }
hagitori-extensions = { path = "crates/extensions" }
hagitori-sync = { path = "crates/sync" }

[package]
name = "hagitori"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Manga downloader with TypeScript extensions"

[lib]
name = "hagitori_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-opener.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
base64.workspace = true
hagitori-core.workspace = true
hagitori-http.workspace = true
hagitori-browser.workspace = true
hagitori-providers.workspace = true
hagitori-download.workspace = true
hagitori-grouper.workspace = true
hagitori-config.workspace = true
hagitori-extensions.workspace = true
hagitori-sync.workspace = true
tauri-plugin-dialog = "2.6.0"
quick-xml.workspace = true
lru.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tokio-util.workspace = true
zip.workspace = true
tempfile.workspace = true

[lints]
workspace = true
