[package]
name = "hagitori-browser"
version.workspace = true
edition.workspace = true

[dependencies]
hagitori-core.workspace = true
hagitori-http.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
url.workspace = true
base64.workspace = true
tempfile.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
chromiumoxide.workspace = true

[lints]
workspace = true
