[package]
name = "hagitori-config"
version.workspace = true
edition.workspace = true

[dependencies]
hagitori-core.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
