[package]
name = "hagitori-extensions"
version.workspace = true
edition.workspace = true

[dependencies]
hagitori-core.workspace = true
hagitori-http.workspace = true
hagitori-browser.workspace = true
wreq.workspace = true
rquickjs.workspace = true
scraper.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
url.workspace = true
base64.workspace = true
sha2.workspace = true
md-5.workspace = true
hmac.workspace = true
chrono.workspace = true
getrandom = "0.4.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile.workspace = true

[lints]
workspace = true
