[package]
name = "hagitori-http"
version.workspace = true
edition.workspace = true

[dependencies]
hagitori-core.workspace = true
wreq.workspace = true
wreq-util.workspace = true
url.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
