[package]
name = "hagitori-providers"
version.workspace = true
edition.workspace = true

[dependencies]
hagitori-core.workspace = true
hagitori-http.workspace = true
hagitori-browser.workspace = true
hagitori-extensions.workspace = true
url.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
