[package]
name = "hagitori-sync"
version.workspace = true
edition.workspace = true

[dependencies]
hagitori-core.workspace = true
hagitori-http.workspace = true
hagitori-config.workspace = true
hagitori-extensions.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
